<resources>
    <string name="app_name">faculty</string>
    <string name="edit_message">Enter a message</string>
    <string name="thank_u_for_the_response">thank u for the response</string>
    <string name="realtime_rated_peers">Realtime Rated Peers :</string>
    <string name="code">Code :</string>
    <string name="summary_of_the_previous_class_and_conclusions_of_today_s_class">Summary of the previous class and conclusions of today\'s class</string>
    <string name="homework_reference_works_complexity">Homework/Reference Works Complexity</string>
    <string name="too_less2">too less</string>
    <string name="less2">less</string>
    <string name="adequate2">adequate</string>
    <string name="submit">Submit</string>
    <string name="previous_page">Previous page</string>
    <string name="enter_your_thoughts">Enter your thoughts</string>
    <string name="feedback">feedback</string>
    <string name="v_heavy2">v.heavy</string>
    <string name="heavy2">heavy</string>
    <string name="rate_page2">Rate Page</string>
    <string name="code2">Code :</string>
    <string name="next_page">Next Page</string>
    <string name="interactive_class">Interactive Class?</string>
    <string name="_0">0</string>
    <string name="adequate">adequate</string>
    <string name="_5">5</string>
    <string name="usage_of_digital_tools">Usage of Digital Tools</string>
    <string name="heavy">heavy</string>
    <string name="v_heavy">v.heavy</string>
    <string name="less">less</string>
    <string name="too_less">too less</string>
    <string name="portion_coverage">Portion Coverage</string>
    <string name="select_user">select user</string>
    <string name="student">student</string>
    <string name="faculty">faculty</string>
    <string name="generate">generate</string>
    <string name="room_code">Room Code :</string>
    <string name="code_generation">code generation</string>
    <string name="go_to_room">go to room</string>
    <string name="enter_room_code">Enter Room Code</string>
    <string name="welcome_student">Welcome Student</string>
    <string name="rate_page">Rate Page</string>
    <string name="submit2">submit</string>
    <string name="taught_well">taught well</string>
    <string name="enter_your_thoughts2">enter your thoughts</string>
</resources>